--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <title>Rock Paper & Scissors</title>
+    
 </head>
 <body>
     <section class = "game-section">
@@ -46,7 +46,7 @@
         </div>
         <div class = "intro-page">
             <h1>ROCK PAPER SCISSORS</h1>
-            <button>Let's Start</button>
+            <button class = "start">Let's Start</button>
         </div>
         <div class= "match-winner fadeOut">
             <h3 class="option-main">Choose an option</h3>
@@ -65,5 +65,7 @@
 
 
     </section>
+    
 </body>
+<script  src="script.js"></script>
 </html>
