logic-in-progress

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Rock Paper & Scissors</title>
-    
+    <script defer src="script.js"></script>
 </head>
 <body>
     <section class = "game-section">
@@ -44,17 +44,17 @@
                 </tbody>
             </table>
         </div>
-        <div class = "intro-page">
+        <div class = "intro-page ">
             <h1>ROCK PAPER SCISSORS</h1>
-            <button class = "start">Let's Start</button>
+            <button>Let's Start</button>
         </div>
-        <div class= "match-winner fadeOut">
+        <div class= "match-winner">
             <h3 class="option-main">Choose an option</h3>
-        <div id = "option-select">
-            <img src = "./Player11.png"  class= "player1-image">
-            <img src = "./Player22.png" class= "player2-image">
+        <div class = "option-select">
+            <img src = "./Player11.png"  class= "player1-image" alt= "player1">
+            <img src = "./Player22.png" class= "player2-image"  alt= "player2">
         </div>
-        <div class = "option-btn">
+        <div class = "option">
             <button class ="rock-button">Rock</button>
             <button class="paper-button">Paper</button>
             <button class ="scissors-button">Scissors</button>
@@ -67,5 +67,5 @@
     </section>
     
 </body>
-<script  src="script.js"></script>
+
 </html>
