scores update in progress

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class = "score-table">
             <div class ="player1-score">
                 <h3>Player1</h3>
-                <p>0</p>
+                <p class ="player1score">0</p>
             </div>
             <div class ="player2-score">
                 <h3>Player2</h3>
-                <p>0</p>
+                <p class ="player2score">0</p>
             </div>
         </div>
         <div class = "tabble-div" >
@@ -45,19 +45,23 @@
             </table>
         </div>
         <div class = "intro-page ">
-            <h1>ROCK PAPER SCISSORS</h1>
+            <h1>ROCK PAPER SCISSORS GAME</h1>
+            <h2>Wins three round to be the victor</h2>
             <button>Let's Start</button>
         </div>
         <div class= "match-winner">
             <h3 class="option-main">Choose an option</h3>
         <div class = "option-select">
-            <img src = "./Player11.png"  class= "player1-image" alt= "player1">
-            <img src = "./Player22.png" class= "player2-image"  alt= "player2">
+            <img src = "./Rock.jpg"  class= "player1-image"  alt= "player1">
+            <img src =  "./Rock.jpg" class= "player2-image"  alt= "player2">
         </div>
         <div class = "option">
             <button class ="rock-button">Rock</button>
             <button class="paper-button">Paper</button>
             <button class ="scissors-button">Scissors</button>
+        </div>
+        <div class = "scoreClear">
+            <button class= "reset-button">Clear Scoreboard</button>
         </div>
         </div>
 
