--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class= "match-winner">
             <h3 class="option-main">Choose an option</h3>
-        <div class = "option-select">
+        <div class = "hands">
             <img src = "./Rock.jpg"  class= "player1-image"  alt= "player1">
             <img src =  "./Rock.jpg" class= "player2-image"  alt= "player2">
         </div>
