--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <img src =  "./Rock.jpg" class= "player2-image"  alt= "player2">
         </div>
         <div class = "option">
-            <button class ="rock-button">Rock</button>
-            <button class="paper-button">Paper</button>
-            <button class ="scissors-button">Scissors</button>
+            <button class ="rock-button" id ="Rock">Rock</button>
+            <button class="paper-button" id ="Rock">Paper</button>
+            <button class ="scissors-button" id ="Rock">Scissors</button>
         </div>
         <div class = "scoreClear">
             <button class= "reset-button">Clear Scoreboard</button>
